# antbyte

./: .gitignore  .gitmodules  Cargo.toml  TODO.md  mirror_stdlib.sh  random_world.sh  std.ant  test.ant  test2.ant
.cargo/: config.toml
ant_code/: test.ant
antlets/: ants.ant  checkers.ant  exponential.ant  l.ant  langton.ant  langton_swarm.ant  langton_swarm_big.ant  metadata.md  palette.ant  rainbow.ant  random_move.ant  random_paint.ant  random_paint_diagonal.ant  sacred_arch.ant  test.ant  zigzag.ant
antlets/experiments/: blink.ant  cheese.ant  cursive.ant  exponential.ant  green_lines.ant  langton_fill.ant  langton_swarm.ant  langton_swarm_big.ant  oasis.ant  order_and_chaos.ant  ripple.ant  sacred_arch.ant  zigzag.ant  zigzag2.ant
js/: lib.d.ts  lib.mjs  template.mjs  util.mjs
js/bindings/: Behavior.ts  Peripheral.ts  PeripheralBit.ts  StartingPos.ts  WorldConfig.ts
js/examples/: random_world.mjs
src/: ant.rs  bitvec.rs  circuit.rs  cli.rs  files.rs  gif_export.rs  lib.rs  main.rs  map.rs  matrix.rs  midi.rs  truth_table.rs  vec2.rs  world.rs
src/ant/: archetype.rs  behavior.rs  circuit.rs  controller.rs  event.rs  mod.rs  parser.rs  peripherals.rs  pin.rs  sub_pin.rs  world.rs
src/ant/world/: ant_tick.rs  gif_export.rs  mod.rs  run.rs
src/cli/: args.rs  command_parser.rs  file_compiler.rs  interrupt.rs  mod.rs  watch.rs
src/compiler/: mod.rs  parser.rs  token.rs
src/compiler/parser/: circuit_parser.rs  (+3 more)
src/parser/: circuit_parser.rs  compiler.rs  expression_parser.rs  func_parser.rs  lexer.rs  mod.rs  token.rs  world_parser.rs
src/plugins/: mod.rs
src/ui/: mod.rs
src/util/: bitvec.rs  dir.rs  grid.rs  matrix.rs  mod.rs  vec2.rs
src/world/: ant_tick.rs  config.rs  file_compiler.rs  frame.rs  mod.rs  run.rs  state.rs  tick.rs  tick_ant.rs  tick_util.rs
vscode-antbyte/: README.md  language-configuration.json  package.json
vscode-antbyte/syntaxes/: ant.tmLanguage.json
(+41 files in other folders)
