[package]
name = "antbyte"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
rand = "0.9.2"
regex = "1.12.3"

clap = { version = "4.5.60", features = ["derive"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }

gif = { version = "0.14.1", optional = true }

[dev-dependencies]
ts-rs = { version = "12.0.1", features = ["no-serde-warnings"] }

[features]
default = ["clap", "extras"]
# default = ["clap"]
clap = ["dep:clap"]
extras = ["dep:gif"]

[build]
rustflags = ["--remap-path-prefix=/home/yourname=~"]
